2024-11-03 added "client_lgas" table
Allow for clients to be in more than 1 lga area.
eg a business might be in more than one area
client_lgas table matches client_id and lga_id
